# setup-pipx

./: .gitignore  LICENSE  README.md  action.yml  install_pipx_wrapper.py  noxfile.py  setup_pipx.py
.github/workflows/: test.yml
pipx_wrapper/: pyproject.toml
test/: test_setup_pipx.py
